{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 530,
  "lineage": "75de3778-6ef3-9f1c-dacd-f3840774a74a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "wp_private_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "default_route_table_id": "rtb-0d2ca9ecb23653925",
            "id": "rtb-0d2ca9ecb23653925",
            "owner_id": "033940273928",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "wp_private"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "wp_dev",
      "provider": "provider.aws",
      "instances": [
        {
          "status": "tainted",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-06f2f779464715dc5",
            "arn": "arn:aws:ec2:us-west-2:033940273928:instance/i-0d0f24be6af0c93f1",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "iam_instance_profile": "s3_access",
            "id": "i-0d0f24be6af0c93f1",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "brylex-tf",
            "monitoring": false,
            "primary_network_interface_id": "eni-0dd46eebf4dbc999a",
            "private_dns": "ip-10-0-1-9.us-west-2.compute.internal",
            "private_ip": "10.0.1.9",
            "public_dns": "ec2-52-42-169-210.us-west-2.compute.amazonaws.com",
            "public_ip": "52.42.169.210",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-09e1f9f9bfe650ad1",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0766f7234c08cb40d",
            "tags": {
              "Name": "wp_dev",
              "auto-delete": "no"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-05b0496671648b2bb"
            ]
          },
          "depends_on": [
            "aws_iam_instance_profile.s3_access_profile",
            "aws_key_pair.wp_auth",
            "aws_security_group.wp_dev_sg",
            "aws_subnet.wp_public1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "wp_internet_gateway",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "igw-02b1d225c7ff873ad",
            "owner_id": "033940273928",
            "tags": {
              "Name": "wp_igs"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "wp_lb",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:033940273928:loadbalancer/net/brylextf/0368927b880eeed9",
            "arn_suffix": "net/brylextf/0368927b880eeed9",
            "dns_name": "brylextf-0368927b880eeed9.elb.us-west-2.amazonaws.com",
            "enable_cross_zone_load_balancing": false,
            "enable_deletion_protection": false,
            "id": "arn:aws:elasticloadbalancing:us-west-2:033940273928:loadbalancer/net/brylextf/0368927b880eeed9",
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "network",
            "name": "brylextf",
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0766f7234c08cb40d"
              },
              {
                "subnet_id": "subnet-07b786b7e2f52c707"
              }
            ],
            "subnets": [
              "subnet-0766f7234c08cb40d",
              "subnet-07b786b7e2f52c707"
            ],
            "tags": {
              "Use": "wp_terra_demo",
              "auto-delete": "no"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8",
            "zone_id": "Z18D5FSROUN65G"
          },
          "depends_on": [
            "aws_subnet.wp_public1_subnet",
            "aws_subnet.wp_public2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "wp_listener",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:033940273928:listener/net/brylextf/0368927b880eeed9/6c35296ca50f405c",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:033940273928:targetgroup/brylextftg/49df4fc07e73f30a",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:033940273928:listener/net/brylextf/0368927b880eeed9/6c35296ca50f405c",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:033940273928:loadbalancer/net/brylextf/0368927b880eeed9",
            "port": 80,
            "protocol": "TCP",
            "ssl_policy": "",
            "timeouts": null
          },
          "depends_on": [
            "aws_lb.wp_lb",
            "aws_lb_target_group.wp_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wp_target_group",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:033940273928:targetgroup/brylextftg/49df4fc07e73f30a",
            "arn_suffix": "targetgroup/brylextftg/49df4fc07e73f30a",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "port": "80",
                "protocol": "TCP",
                "timeout": 10,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:033940273928:targetgroup/brylextftg/49df4fc07e73f30a",
            "lambda_multi_value_headers_enabled": false,
            "name": "brylextftg",
            "port": 80,
            "protocol": "TCP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "target_type": "instance",
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "wp_attachment",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-west-2:033940273928:targetgroup/brylextftg/49df4fc07e73f30a-20190828191601618500000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:033940273928:targetgroup/brylextftg/49df4fc07e73f30a",
            "target_id": "i-0d0f24be6af0c93f1"
          },
          "depends_on": [
            "aws_instance.wp_dev",
            "aws_lb_target_group.wp_target_group"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "wp_public_rt",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-00116f81cc1c22143",
            "owner_id": "033940273928",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-02b1d225c7ff873ad",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wp_public"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_internet_gateway.wp_internet_gateway",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public1_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b2fdb6630780bdc7",
            "route_table_id": "rtb-00116f81cc1c22143",
            "subnet_id": "subnet-0766f7234c08cb40d"
          },
          "depends_on": [
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_public1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "wp_public2_assoc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e7cad96f5663b9f",
            "route_table_id": "rtb-00116f81cc1c22143",
            "subnet_id": "subnet-050e33500444fab9a"
          },
          "depends_on": [
            "aws_route_table.wp_public_rt",
            "aws_subnet.wp_private2_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_dev_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:security-group/sg-05b0496671648b2bb",
            "description": "Used for access to dev instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05b0496671648b2bb",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_dev_sg",
            "name_prefix": null,
            "owner_id": "033940273928",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_private_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:security-group/sg-01f9111993a3dab64",
            "description": "Used for private access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01f9111993a3dab64",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "wp_private_sg",
            "name_prefix": null,
            "owner_id": "033940273928",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_public_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:security-group/sg-08bedab738502cd8c",
            "description": "used for public access",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bedab738502cd8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wp_public_sg",
            "name_prefix": null,
            "owner_id": "033940273928",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "wp_rds_sg",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:security-group/sg-0cde25f1f86c27bcd",
            "description": "used for rds",
            "egress": [],
            "id": "sg-0cde25f1f86c27bcd",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01f9111993a3dab64",
                  "sg-05b0496671648b2bb",
                  "sg-08bedab738502cd8c"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "wp_rds_sg",
            "name_prefix": null,
            "owner_id": "033940273928",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_security_group.wp_dev_sg",
            "aws_security_group.wp_private_sg",
            "aws_security_group.wp_public_sg",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:subnet/subnet-0054be1a2ffa9bb82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0054be1a2ffa9bb82",
            "map_public_ip_on_launch": false,
            "owner_id": "033940273928",
            "tags": {
              "Name": "wp_private1"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_private2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:subnet/subnet-050e33500444fab9a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-050e33500444fab9a",
            "map_public_ip_on_launch": false,
            "owner_id": "033940273928",
            "tags": {
              "Name": "wp_private2"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:subnet/subnet-0766f7234c08cb40d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0766f7234c08cb40d",
            "map_public_ip_on_launch": true,
            "owner_id": "033940273928",
            "tags": {
              "Name": "wp_public1"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_public2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:subnet/subnet-07b786b7e2f52c707",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-07b786b7e2f52c707",
            "map_public_ip_on_launch": true,
            "owner_id": "033940273928",
            "tags": {
              "Name": "wp_public2"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds1_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:subnet/subnet-0d2f4449946166638",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-0d2f4449946166638",
            "map_public_ip_on_launch": false,
            "owner_id": "033940273928",
            "tags": {
              "Name": "rds_1"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds2_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:subnet/subnet-0f2dd1d8bd53fb197",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.6.0/24",
            "id": "subnet-0f2dd1d8bd53fb197",
            "map_public_ip_on_launch": false,
            "owner_id": "033940273928",
            "tags": {
              "Name": "rds_2"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "wp_rds3_subnet",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:subnet/subnet-063afb6802281b767",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.7.0/24",
            "id": "subnet-063afb6802281b767",
            "map_public_ip_on_launch": false,
            "owner_id": "033940273928",
            "tags": {
              "Name": "rds_3"
            },
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_vpc.wp_vpc",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "wp_vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:033940273928:vpc/vpc-09a8430f0a6a76bf8",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0368ef89261f6f164",
            "default_route_table_id": "rtb-0d2ca9ecb23653925",
            "default_security_group_id": "sg-06629b2304407861a",
            "dhcp_options_id": "dopt-62d00f1a",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-09a8430f0a6a76bf8",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d2ca9ecb23653925",
            "owner_id": "033940273928",
            "tags": {
              "Name": "wp_vpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "wp_private-s3_endpoint",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_blocks": [
              "54.231.160.0/19",
              "52.218.128.0/17",
              "52.92.32.0/22"
            ],
            "id": "vpce-0e9da1809fcd09b35",
            "owner_id": "033940273928",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-00116f81cc1c22143",
              "rtb-0d2ca9ecb23653925"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09a8430f0a6a76bf8"
          },
          "depends_on": [
            "aws_route_table.wp_public_rt",
            "aws_vpc.wp_vpc"
          ]
        }
      ]
    }
  ]
}